CHATS_SIT/force-app/main/default/objects/PII_Exception__mdt.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PII_in_Exception_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII in Exception Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PII_in_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII in Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PII_in_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII in Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PII_in_Stack_Trace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII in Stack Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Log_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for controlling the success callout logging.</description>
        <label>Success Log Required</label>
        <type>Checkbox</type>
    </fields>    
    <label>Log Setup</label>
    <pluralLabel>Log Setup</pluralLabel>
</CustomObject>